--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,12 +2,12 @@
 #
 # To get started with Astro see: https://docs.astro.build/en/getting-started/
 #
-name: Deploy Astro site to Pages
+name: Build Astro site
 
 on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-  ..inputs:
+    inputs:
       mode:
         type: choice
         description: "Build mode (default production)"
