refactor: new theme

--- a/.env.development
+++ b/.env.development
@@ -8,4 +8,4 @@ VITE_SITE_URL=http://localhost:4321
 VITE_PLAUSIBLE_ENABLE=false
 
 # Enable comments (giscus)
-VITE_GISCUS_ENABLE=false
+VITE_GISCUS_ENABLE=true
