refactor: change analytics to umami

--- a/.env.production
+++ b/.env.production
@@ -4,8 +4,8 @@ VITE_SITE_TITLE=Doesmycode.work
 # Site URL
 VITE_SITE_URL=http://doesmycode.work
 
-# Enable analytics (plausible)
-VITE_PLAUSIBLE_ENABLE=true
+# Enable analytics (umami)
+VITE_ANALYTICS_ENABLE=true
 
 # Enable comments (giscus)
 VITE_GISCUS_ENABLE=true
