--- a/.env.development
+++ b/.env.development
@@ -4,8 +4,8 @@ VITE_SITE_TITLE=Doesmycode.work (Development)
 # Site URL
 VITE_SITE_URL=http://localhost:4321
 
-# Enable analytics (plausible)
-VITE_PLAUSIBLE_ENABLE=false
+# Enable analytics (umami)
+VITE_ANALYTICS_ENABLE=false
 
 # Enable comments (giscus)
 VITE_GISCUS_ENABLE=true
