--- a/.env.staging
+++ b/.env.staging
@@ -4,8 +4,8 @@ VITE_SITE_TITLE=Doesmycode.work (Staging)
 # Site URL
 VITE_SITE_URL=http://staging.doesmycode.work
 
-# Enable analytics (plausible)
-VITE_PLAUSIBLE_ENABLE=false
+# Enable analytics (umami)
+VITE_ANALYTICS_ENABLE=false
 
 # Enable comments (giscus)
 VITE_GISCUS_ENABLE=false
