refactor: change site colors

--- a/.env.production
+++ b/.env.production
@@ -2,7 +2,7 @@
 VITE_SITE_TITLE=Doesmycode.work
 
 # Site URL
-VITE_SITE_URL=http://doesmycode.work
+VITE_SITE_URL=https://doesmycode.work
 
 # Enable analytics (umami)
 VITE_ANALYTICS_ENABLE=true
