--- a/.env.staging
+++ b/.env.staging
@@ -2,7 +2,7 @@
 VITE_SITE_TITLE=Doesmycode.work (Staging)
 
 # Site URL
-VITE_SITE_URL=http://staging.doesmycode.work
+VITE_SITE_URL=https://staging.doesmycode.work
 
 # Enable analytics (umami)
 VITE_ANALYTICS_ENABLE=false
