refactor: change site style

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 # Site Title
-VITE_SITE_TITLE=Doesmycode.work (Development)
+VITE_SITE_TITLE=Doesmycode.work (Dev)
 
 # Site URL
 VITE_SITE_URL=http://localhost:4321
