--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build:prod": "astro check && astro build",
-    "build:staging": "astro check && astro build --mode staging",
+    "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -19,6 +18,9 @@
     "astro": "^4.16.8",
     "astro-icon": "^1.1.5",
     "clsx": "^2.1.1",
+    "markdown-it": "^14.1.0",
+    "sanitize-html": "^2.17.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.8.3"
   },
