--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "astro-icon": "^1.1.5",
     "clsx": "^2.1.1",
     "markdown-it": "^14.1.0",
+    "remark-github-blockquote-alert": "^1.3.1",
     "sanitize-html": "^2.17.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.14",
