--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^6.0.2",
     "@iconify-json/iconoir": "^1.2.7",
+    "@iconify-json/ph": "^1.2.2",
     "astro": "^4.16.8",
     "astro-icon": "^1.1.5",
     "clsx": "^2.1.1",
