chore: apply changes for astro v5

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,6 @@
 {
   "extends": "astro/tsconfigs/strict",
-  "compilerOptions": { "allowSyntheticDefaultImports": true }
+  "compilerOptions": { "allowSyntheticDefaultImports": true },
+  "include": [".astro/types.d.ts", "**/*"],
+  "exclude": ["dist"]
 }
