fix: fix tailwind config

--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@astrojs/check": "^0.9.6",
     "@astrojs/rss": "^4.0.14",
     "@astrojs/sitemap": "^3.6.0",
-    "@astrojs/tailwind": "^6.0.2",
     "@iconify-json/iconoir": "^1.2.7",
     "@iconify-json/ph": "^1.2.2",
+    "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.6",
     "astro-icon": "^1.1.5",
     "clsx": "^2.1.1",
